<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bj_01"
    tools:context="com.example.nicelook.MainActivity" >

    <!-- android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" -->
    
<RelativeLayout
     android:id="@+id/input_area"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="193dp">
     <LinearLayout
        android:id="@+id/input_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp" >

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:focusable="false"
            android:scaleType="fitCenter"
            android:src="@drawable/user"
            android:background="@drawable/icon_bg"
             />
        <EditText
            android:id="@+id/etusername"
            android:layout_width="fill_parent"
            android:layout_height="33dp"
            android:hint="@string/input_user_hint"
            android:textSize="10sp"
            android:textColorHint="#b0b0b0"
            android:textColor="#ffffff"
            android:background="@drawable/input_bg"
            android:inputType="text" />
    </LinearLayout>
    <ImageView
            android:id="@+id/split_line"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:focusable="false"
            android:scaleType="fitCenter"
            android:layout_below="@+id/input_user"
            android:background="@drawable/split_line"
             />
    <LinearLayout
        android:id="@+id/input_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textColor="#ffffff"
        android:layout_below="@+id/split_line" >
        <ImageView
            android:id="@+id/pwd_icon"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:focusable="false"
            android:scaleType="fitCenter"
            android:src="@drawable/pwd"
            android:background="@drawable/icon_bg"/>

        <EditText
            android:id="@+id/etpassword"
            android:layout_width="fill_parent"
            android:layout_height="33dp"
            android:hint="@string/input_pwd_hint"
            android:textColorHint="#b0b0b0"
            android:textSize="10sp"
            android:textColor="#ffffff"
            android:background="@drawable/input_bg"
            android:inputType="textPassword" />
    </LinearLayout>
</RelativeLayout>

    <LinearLayout
        android:id="@+id/line_selected"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="27dp"
        android:layout_below="@+id/input_area" >

       <TextView
            android:id="@+id/line_title"
            android:layout_width="60dp"
            android:layout_height="27dp"
            android:layout_marginLeft="34dp"
            android:text="@string/line_title"
            android:textSize="10sp"
            android:textColor="#b0a59f"
            android:maxLines="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/line1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/line1"
            android:textSize="10sp"
            android:textColor="@color/select_line_text_color"
            android:maxLines="1"
            android:gravity="center"
            android:background="@drawable/select_line"/>

        <TextView
             android:id="@+id/line2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/line2"
            android:textSize="10sp"
            android:textColor="@color/select_line_text_color"
            android:maxLines="1"
            android:gravity="center"
            android:background="@drawable/select_line"/>

        <TextView
           android:id="@+id/line3"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/line3"
            android:textSize="10sp"
            android:textColor="@color/select_line_text_color"
            android:maxLines="1"
            android:gravity="center"
            android:background="@drawable/select_line" />
    </LinearLayout>
    <Button
         android:id="@+id/login"
         android:layout_width="269dp"
         android:layout_height="33dp"
         android:text="@string/login"
         android:textColor="#FFFFFF"
         android:textSize="12sp"
         android:background="@drawable/btn_login_selector"
         android:layout_below="@+id/line_selected"
         android:layout_marginTop="33dp"
         android:layout_centerInParent="true" />

           <!--  <WebView
       android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#050505" />-->

</RelativeLayout>
